Added two new components

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,10 @@
-.header {
-  display: none;
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style: none;
+}
+
+a:visited {
+  color: white;
 }
